--- a/wp-content/themes/mybizniche/resources/css/scss/app.scss
+++ b/wp-content/themes/mybizniche/resources/css/scss/app.scss
@@ -5,6 +5,10 @@
     display: block;
     height: 109px;
     width: 100%;
+
+    @include media(max-width, 1023px){
+        height: 140px;
+    }
 }
 
 
@@ -14,6 +18,7 @@
     padding-top: 145px;
     padding-bottom: 145px;
     overflow: hidden;
+    position: relative;
 
     .text-wrap,
     .p-tabs,
@@ -148,100 +153,6 @@
                     opacity: 0;
                     visibility: hidden;
                     transition: 0.4s ease all;
-
-                    h3{
-                        font-size: 32px;
-                        font-weight: bold;
-                        color: $color-dark;
-                        margin-bottom: 0;
-                        line-height: 1;
-                        text-transform: uppercase;
-                    }
-
-                    h6{
-                        font-size: 14px;
-                        font-weight: bold;
-                        color: $color-dark;
-                        margin-bottom: 10px;
-                    }
-
-                    .sizes{
-                        margin-bottom: 10px;
-
-                        li{
-                            margin-right: 5px;
-
-                            &:last-child{
-                                margin-right: 0;
-                            }
-
-                            a{
-                                font-size: 14px;
-                                text-align: center;
-                                color: $color-light-grey;
-                                display: block;
-                                border: 1px solid #707070;
-                                padding: 6px 12px;
-                            }
-
-                            &.active{
-                                a{
-                                    background-color: $color-primary;
-                                    border-color: $color-primary;
-                                    color: $color-white;
-                                }
-                            }
-                        }
-                    }
-
-                    .price{
-                        font-family: 'Oswald', sans-serif;
-                        font-size: 18px;
-                        font-weight: normal;
-                        color: $color-dark;
-                        display: block;
-                        margin-bottom: 10px;
-
-                        sup{
-                            color: #858997;
-                            line-height: 1;
-                            display: inline-block;
-                            vertical-align: bottom;
-                        }
-                    }
-
-                    .actions{
-                        li{
-                            margin-right: 10px;
-
-                            &:last-child{
-                                margin-right: 0;
-                            }
-
-                            a{
-                                font-family: "Roboto", sans-serif;
-                                font-size: 14px;
-                                font-weight: bold;
-                                color: $color-dark;
-                                border-color: $color-dark;
-                                background: transparent;
-                                line-height: 2;
-                                padding: 8px 18px;
-
-                                span{
-                                    font-size: 21px;
-                                    vertical-align: middle;
-                                    display: inline-block;
-                                    margin-right: 5px;
-                                }
-
-                                &.add-to-cart{
-                                    background-color: $color-dark;
-                                    color: #fff;
-                                }
-                            }
-                        }
-                    }
                 }
 
                 &:hover{
@@ -258,6 +169,151 @@
                     }
                 }
             }
+        }
+
+        .product-info{
+            h3{
+                font-size: 32px;
+                font-weight: bold;
+                color: $color-dark;
+                margin-bottom: 0;
+                line-height: 1;
+                text-transform: uppercase;
+            }
+
+            h6{
+                font-size: 14px;
+                font-weight: bold;
+                color: $color-dark;
+                margin-bottom: 10px;
+            }
+
+            .sizes{
+                margin-bottom: 10px;
+
+                li{
+                    margin-right: 5px;
+
+                    &:last-child{
+                        margin-right: 0;
+                    }
+
+                    a{
+                        font-size: 14px;
+                        text-align: center;
+                        color: $color-light-grey;
+                        display: block;
+                        border: 1px solid #707070;
+                        padding: 6px 12px;
+                    }
+
+                    &.active{
+                        a{
+                            background-color: $color-primary;
+                            border-color: $color-primary;
+                            color: $color-white;
+                        }
+                    }
+                }
+            }
+
+            .price{
+                font-family: 'Oswald', sans-serif;
+                font-size: 18px;
+                font-weight: normal;
+                color: $color-dark;
+                display: block;
+                margin-bottom: 10px;
+
+                sup{
+                    color: #858997;
+                    line-height: 1;
+                    display: inline-block;
+                    vertical-align: bottom;
+                }
+            }
+
+            .actions{
+                li{
+                    margin-right: 10px;
+
+                    &:last-child{
+                        margin-right: 0;
+                    }
+
+                    a{
+                        font-family: "Roboto", sans-serif;
+                        font-size: 14px;
+                        font-weight: bold;
+                        color: $color-dark;
+                        border-color: $color-dark;
+                        background: transparent;
+                        line-height: 2;
+                        padding: 8px 18px;
+
+                        span{
+                            font-size: 21px;
+                            vertical-align: middle;
+                            display: inline-block;
+                            margin-right: 5px;
+                        }
+
+                        &.add-to-cart{
+                            background-color: $color-dark;
+                            color: #fff;
+                        }
+                    }
+                }
+            }
+        }
+
+        .p-items{
+            display: none;
+
+            .item{
+                display: flex;
+                align-items: center;
+                margin: 0 auto 15px;
+                max-width: 320px;
+
+                .thumb{
+                    flex: 0 0 80px;
+                    margin-right: 10px;
+                }
+
+                .actions{
+                    .button{
+                        padding: 5px 10px;
+                    }
+                }
+            }
+        }
+
+        .f-cards-wrap{
+            margin-top: 30px;
+            display: none;
+        }
+    }
+
+    .find-store-btn{
+        position: absolute;
+        font-size: 16px;
+        font-weight: 500;
+        text-align: center;
+        color: $color-primary;
+        text-transform: uppercase;
+        z-index: 20;    
+        right: 30px;
+        top: 55%;
+        transition: color 0.3s ease;
+
+        &:hover{
+            color: $color-secondary;
+        }
+
+        img{
+            display: block;
+            margin: 0 auto 10px;
         }
     }
 
@@ -306,6 +362,23 @@
         }
     }
 
+    @include media(max-width, 1200px){
+        .find-store-btn{
+            top: 35%;
+            right: auto;
+            left: 0;
+            background-color: #f1f1f1;
+            padding: 7px;
+
+            img{
+                margin: 0;
+                width: 25px;
+                height: auto;
+                margin-right: 5px;
+            }
+        }
+    }
+
     @include media(max-width, 1023px){
         padding-top: 110px;
 
@@ -320,6 +393,15 @@
 
             h2{
                 font-size: 26px;
+            }
+        }
+
+        .find-store-btn{
+            width: 100%;
+            top: 0;
+
+            img{
+                display: inline-block;
             }
         }
     }
@@ -365,6 +447,14 @@
                 .content{
                     display: none !important;
                 }
+            }
+
+            .p-items{
+                display: block;
+            }
+
+            .f-cards-wrap{
+                display: block;
             }
         }
     }
