--- a/wp-content/themes/mybizniche/resources/css/scss/sections/_header.scss
+++ b/wp-content/themes/mybizniche/resources/css/scss/sections/_header.scss
@@ -225,7 +225,7 @@
                 }
 
                 .mega-menu-item{
-                    .mega-block-title{
+                    h4{
                         font-family: 'Roboto', sans-serif !important;
                         font-size: 20px !important;
                         color: $color-light-grey !important;
@@ -596,6 +596,10 @@
             .contact-info{
                 li{
                     margin-bottom: 20px;
+
+                    &.pin{
+                        display: none;
+                    }
                 }
             }
         }
