--- a/wp-content/themes/mybizniche/resources/css/scss/sections/_middle.scss
+++ b/wp-content/themes/mybizniche/resources/css/scss/sections/_middle.scss
@@ -45,3 +45,19 @@
         font-size: 20px;
     }
 }
+
+
+
+.cards-list{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+
+    li{
+        margin: 0 10px;
+    }
+}
