--- a/wp-content/themes/mybizniche/style.css
+++ b/wp-content/themes/mybizniche/style.css
@@ -8,6 +8,11 @@
 
 body {overflow-x: hidden;}
 
+input[type="password"] {padding: 20px;}
+
+/* Block css */
+.has-text-align-center {text-align: center;}
+
 /* Block Overrides */
 .wp-block-group__inner-container, .wp-block-cover__inner-container {max-width: 75rem; padding:0 15px; margin: 0 auto;}
 .wp-block-group__inner-container .wp-block-group__inner-container {padding: 0; max-width: none;}
@@ -103,6 +108,8 @@ body {overflow-x: hidden;}
 
 .woocommerce-notices-wrapper {clear: both;}
 
+.woocommerce .button.secondary {background-color: #14c8f0; color: #fff; padding:1.18em 1.5em;}
+
 .woocommerce-sidebar {position: relative; margin: 0 15px 0 0; height: 100%; border-right: 1px solid rgba(0,0,0,0.08);}
 .woocommerce-sidebar .all-products a {background: #222; color: #fff; display: block; position: relative; padding: 18px 0; font:500 14px "Roboto", sans-serif; text-transform: uppercase; line-height: 1;}
 .woocommerce-sidebar .all-products a:before {content: ""; position: absolute; left: -30px; top:0; bottom: 0; right: 0; background: #222; z-index: -1;}
@@ -130,6 +137,7 @@ body {overflow-x: hidden;}
 #woocommerce ul.products {padding: 30px 0 0;}
 #woocommerce ul.products li {text-align: center;}
 #woocommerce ul.products li h2 {}
+#woocommerce ul.products li.product a img {width: auto; margin: 0 auto;}
 #woocommerce ul.products li .onsale {background: #222; margin: 0; min-height: 1px; min-width: 1px; padding: 10px; border-radius: 20px; font:400 14px/1 "Roboto", sans-serif}
 #woocommerce ul.products li .price {font:400 18px "Oswald", sans-serif; color: #222222;}
 #woocommerce ul.products li .price del {color: #bebebe; text-decoration: none; opacity: 1;}
@@ -147,6 +155,8 @@ body {overflow-x: hidden;}
 /*  Product detail */
 #woocommerce-single-product {position: relative;}
 #woocommerce .product_title {font-size: 40px; color: #1c8ece; letter-spacing: normal; text-transform: uppercase;}
+
+#woocommerce div.product div.images img {width: auto; margin: 0 auto 15px;}
 
 #woocommerce-single-product .onsale {background: #222; margin: 0; min-height: 1px; min-width: 1px; padding: 10px; border-radius: 20px; font:400 14px/1 "Roboto", sans-serif}
 #woocommerce-single-product .woocommerce-image-summary {padding: 40px 0;}
@@ -197,6 +207,7 @@ body {overflow-x: hidden;}
 
 #woocommerce-single-product .related {padding: 70px 0 20px;}
 #woocommerce-single-product .related h2 {font-size: 32px; font-weight: bold;}
+ 
 
 /* Product popup */
 #yith-quick-view-modal.open .yith-wcqv-main {overflow-y: auto;}
@@ -228,6 +239,52 @@ body {overflow-x: hidden;}
 .button-variable-wrapper .variable-item {color: #b2b2ae !important;}
 .button-variable-wrapper .variable-item.selected {background: #333 !important; color: #fff !important;}
 
+/* My account */
+.woocommerce-account {font-size: 18px; font-weight: 400; color: #222;}
+.woocommerce-account p {font-size: 18px; font-weight: 400; color: #222;}
+
+.myaccount-header {padding: 160px 0;}
+
+.myaccount-main {padding: 20px 0;}
+.myaccount-main a:not(.button) {color:#14c8f0;}
+.myaccount-main a:not(.button):hover {color:#000;}
+
+.myaccount-sidebar {border-right: 1px solid rgba(0,0,0,0.1); height: 100%;  padding: 20px 0;}
+.myaccount-sidebar .myaccount-navigation ul {margin: 0; padding: 0;}
+.myaccount-sidebar .myaccount-navigation ul li {list-style: none; padding:0; margin: 0;}
+.myaccount-sidebar .myaccount-navigation ul li:before {display:none;}
+.myaccount-sidebar .myaccount-navigation ul li[class*="downloads"] {display:none;}
+.myaccount-sidebar .myaccount-navigation ul li a {color: #222;padding: 18px 40px 18px 30px; display: block; font:500 14px "Roboto", sans-serif; text-transform: uppercase; line-height: 1; position: relative;}
+.myaccount-sidebar .myaccount-navigation ul li a:after {content: ""; transition: all 0.5s ease; position: absolute; width: 10px; height: 10px; right: 20px; top: 20px; border-top: 2px solid; border-right: 2px solid; transform: rotate(45deg); opacity: .3;}
+.myaccount-sidebar .myaccount-navigation ul li a:hover, .myaccount-sidebar .myaccount-navigation ul li.is-active > a {background-color: #222; color:#fff;}
+
+.sidebar-menu h6 {text-transform: uppercase; text-align: center;}
+.sidebar-menu .myaccount-navigation {height: 100%;}
+.sidebar-menu .myaccount-navigation ul {margin: 0; padding: 0 0 80px; position: relative; min-height: 100%;}
+.sidebar-menu .myaccount-navigation ul li {list-style: none; padding:0; margin: 0;}
+.sidebar-menu .myaccount-navigation ul li a {padding: 12px 0; font-size: 16px; position: relative; color: #333; display: block;}
+.sidebar-menu .myaccount-navigation ul li[class*="downloads"] {display:none;}
+.sidebar-menu .myaccount-navigation ul li[class*="customer-logout"] {position: absolute; left: 0; right: 0; bottom: 20px;}
+.sidebar-menu .myaccount-navigation ul li[class*="customer-logout"] a {text-align: center; font-size: 14px; text-transform: uppercase; font-weight:bold;}
+.sidebar-menu .myaccount-navigation ul li[class*="customer-logout"] a:before {content: url(resources/img/icn-logout.png);	display: inline-block;	vertical-align: middle;	height: 20px;	margin: 0 5px 0 0;}
+
+
+.woocommerce-notices-wrapper {font-size:14px; position: fixed; right: 0; width: 362px; max-width: 90%; height: auto; z-index: 99999; top: 25%; box-shadow: 0 0 30px rgba(0,0,0,0.2);}
+.woocommerce-notices-wrapper .woocommerce-error {margin: 0;}
+/*.woocommerce-error {position: fixed; right: 0;  top: 25%;   z-index: 9999; cursor: url(../images/cursor-close-red.png), auto;}*/
+.woocommerce-error.hide {display: none;}
+.woocommerce-notices-wrapper.hide {display: none;}
+.woocommerce-notices-wrapper .woocommerce-error ~ .close-notify,
+.woocommerce-notices-wrapper .woocommerce-NoticeGroup ~ .close-notify {display: block;}
+.woocommerce-notices-wrapper .close-notify {background:#b81c23 url(resources/img/icn-close-w.svg) no-repeat center / 20px; cursor: pointer; position: absolute; width: 30px; height: 30px; left: -30px; top: 0; display: none;}
+
+
+/* Cart */
+.cart-header {}
+
+
+
+
 @media (min-width: 1600px) {
 	.wp-block-group__inner-container, .wp-block-cover__inner-container {max-width: 1440px;}
 
@@ -258,22 +315,25 @@ body {overflow-x: hidden;}
 
 /* Landscape tablet */
 @media (max-width: 1199px) {
-	.grid-container {padding-left: 30px; padding-right: 30px;}
-	.wp-block-group__inner-container, .wp-block-cover__inner-container {padding-left: 30px; padding-right: 30px;}
+	.grid-container {padding-left: 20px; padding-right: 20px;}
+	.wp-block-group__inner-container, .wp-block-cover__inner-container {padding-left: 20px; padding-right: 20px;}
 	
-	.sec-tagline figure {margin: 0 -30px;}
+	.sec-tagline figure {margin: 0 -20px;}
 
-	.sec-origin figure {margin: 0 -30px;}
+	.sec-origin figure {margin: 0 -20px;}
 	
-	.sec-origin .origin-header::before {left:-30px; right: -30px;}
+	.sec-origin .origin-header::before {left:-20px; right: -20px;}
 	.origin-header h2 {font-size: 40px;}
 	.origin-header p {font-size: 32px;}
 
 	.featured-faqs .sc-faq-item h3 {font-size: 45px;}
 	.featured-faqs .sc-faq-item p {font-size: 22px;}
-	.featured-faqs .sc-faq-item:nth-child(3n+1):before {left: -30px; right: -30px;}
-	.featured-faqs .sc-faq-item:nth-child(3n+2):before {left: -30px;}
-	.sec-faqs .btn-fullwidth:before {left: -30px; right: -30px;}
+	.featured-faqs .sc-faq-item:nth-child(3n+1):before {left: -20px; right: -20px;}
+	.featured-faqs .sc-faq-item:nth-child(3n+2):before {left: -20px;}
+	.sec-faqs .btn-fullwidth:before {left: -20px; right: -20px;}
+
+	.myaccount-header {padding: 90px 0;}
+	.myaccount-header h1 {font-size: 60px;}
 	
 }
 
@@ -298,6 +358,11 @@ body {overflow-x: hidden;}
 	.woocommerce-sidebar .all-products a:before {display: none;}
 	.woocommerce-sidebar.show .all-products a:after {transform: rotate(135deg);}
 	.woocommerce-sidebar .all-products span {cursor: pointer; position: absolute; width: 50px; height: 50px; right: 0px;top: 0px;}
+
+	.myaccount-sidebar .myaccount-navigation > span {cursor: pointer; display: block; position: relative; font-size: 18px; font-weight: bold; color:#fff; background: #333; padding: 12px 15px;}
+	.myaccount-sidebar .myaccount-navigation > span:before {content: ""; position: absolute; width: 12px; height: 12px; right: 20px;top: 20px; border-top: 2px solid #bebebe; border-right: 2px solid #bebebe; transform: rotate(45deg);}
+	.myaccount-sidebar .myaccount-navigation ul {display: none;}
+	.myaccount-sidebar.nav-open .myaccount-navigation ul {display: block;}
 
 	.woocommerce-sidebar .all-categories {display: none; background: rgba(0,0,0,0.06); padding: 10px 15px;}
 	.woocommerce-sidebar.show .all-categories {display: block;}
@@ -328,6 +393,9 @@ body {overflow-x: hidden;}
 	.woocommerce-count-filter {float:none; display: flex;}
 	.woocommerce-count-filter .woocommerce-result-count {white-space: nowrap;}
 	.woocommerce-count-filter .woocommerce-ordering {flex-basis: 100%;}
+	
+	.myaccount-header {padding: 80px 0 30px 0;}
+	.myaccount-header h1 {font-size: 40px;}
 }
 
 @media (max-width: 480px) {
