--- a/wp-content/themes/mybizniche/style.css
+++ b/wp-content/themes/mybizniche/style.css
@@ -108,7 +108,7 @@ input[type="password"] {padding: 20px;}
 
 .woocommerce-notices-wrapper {clear: both;}
 
-.woocommerce .button.secondary {background-color: #14c8f0; color: #fff; padding:1.18em 1.5em;}
+.woocommerce a.button.secondary, .woocommerce button.button.secondary, .woocommerce input.button.secondary {background-color: #14c8f0; color: #fff; padding:1.18em 1.5em;}
 
 .woocommerce-sidebar {position: relative; margin: 0 15px 0 0; height: 100%; border-right: 1px solid rgba(0,0,0,0.08);}
 .woocommerce-sidebar .all-products a {background: #222; color: #fff; display: block; position: relative; padding: 18px 0; font:500 14px "Roboto", sans-serif; text-transform: uppercase; line-height: 1;}
@@ -144,7 +144,7 @@ input[type="password"] {padding: 20px;}
 #woocommerce ul.products li .price ins {text-decoration: none; font-weight: 400;}
 
 #woocommerce ul.products li .button {height: 46px; padding: 5px 16px; font:500 14px/34px "Roboto", sans-serif; margin: 5px; text-transform: uppercase;}
-#woocommerce ul.products li .add_to_cart_button {border:1px solid #333; background: #222 url(resources/img/icn-shop-bag.svg) no-repeat 18px center; color: #fff; padding: 5px 25px 5px 55px; font-weight: bold;}
+#woocommerce ul.products li .add_to_cart_button {border:1px solid #333; background: #222 url(resources/img/icn-shop-bag.svg) no-repeat 15px center; color: #fff; padding: 5px 20px 5px 50px; font-weight: bold;}
 #woocommerce ul.products li .add_to_cart_button.added {padding:5px 25px; background-image: none; pointer-events: none; opacity: 0.8;}
 #woocommerce ul.products li .add_to_cart_button.loading:after {top: 5px;}
 #woocommerce ul.products li .yith-wcqv-button {border:1px solid #333;}
@@ -216,6 +216,7 @@ input[type="password"] {padding: 20px;}
 #yith-quick-view-modal .onsale {background: #222; margin: 0; min-height: 1px; min-width: 1px; padding: 10px; border-radius: 20px; font:400 14px/1 "Roboto", sans-serif}
 
 #yith-quick-view-content div.images {padding: 70px 0;}
+#yith-quick-view-content div.images img {width:auto; margin:0 auto 15px;}
 #yith-quick-view-content div.summary {padding:100px 15px 50px;}
 #yith-quick-view-modal .product_title {font-size: 40px; color: #1c8ece; letter-spacing: normal; text-transform: uppercase;}
 #yith-quick-view-modal .single_add_to_cart_button {letter-spacing:normal; text-transform: uppercase; border:1px solid #333; background: #222 url(resources/img/icn-shop-bag.svg) no-repeat 18px center; color: #fff; padding: 20px 25px 20px 55px; font-weight: bold;}
@@ -270,19 +271,62 @@ input[type="password"] {padding: 20px;}
 
 
 .woocommerce-notices-wrapper {font-size:14px; position: fixed; right: 0; width: 362px; max-width: 90%; height: auto; z-index: 99999; top: 25%; box-shadow: 0 0 30px rgba(0,0,0,0.2);}
-.woocommerce-notices-wrapper .woocommerce-error {margin: 0;}
+.woocommerce-notices-wrapper .woocommerce-error, .woocommerce-notices-wrapper .woocommerce-message {margin: 0;}
 /*.woocommerce-error {position: fixed; right: 0;  top: 25%;   z-index: 9999; cursor: url(../images/cursor-close-red.png), auto;}*/
 .woocommerce-error.hide {display: none;}
 .woocommerce-notices-wrapper.hide {display: none;}
 .woocommerce-notices-wrapper .woocommerce-error ~ .close-notify,
+.woocommerce-notices-wrapper .woocommerce-message ~ .close-notify,
 .woocommerce-notices-wrapper .woocommerce-NoticeGroup ~ .close-notify {display: block;}
 .woocommerce-notices-wrapper .close-notify {background:#b81c23 url(resources/img/icn-close-w.svg) no-repeat center / 20px; cursor: pointer; position: absolute; width: 30px; height: 30px; left: -30px; top: 0; display: none;}
+.woocommerce-notices-wrapper .woocommerce-message ~ .close-notify {background-color: #8fae1b;}
 
 
 /* Cart */
-.cart-header {}
+.cart-header {padding:150px 0 80px;}
 
+.woocommerce table.custom-cart th {padding: 6px 12px; font-weight: normal; color: #888;}
+.woocommerce table.custom-cart td {font-size: 18px;}
+.woocommerce table.custom-cart .product-subtotal {text-align: right; padding-right: 30px;}
+.woocommerce table.custom-cart .quantity .qty {width: 80px; font:600 18px "Oswald", sans-serif;}
+.woocommerce table.custom-cart .product-price > span {font:600 18px "Oswald", sans-serif;}
+.woocommerce table.custom-cart .product-price > span > span {font-size: 70%;	vertical-align: top;	display: inline-block;	line-height: 2;}
 
+.woocommerce table.custom-cart .actions .button {font-size: 14px; color: #222222; border:1px solid #b2b2ae;}
+.woocommerce table.custom-cart .actions button[name*='update_cart']:before {content:"+";color:#14c8f0}
+.woocommerce table.custom-cart .actions #coupon_code {width: 180px; height: 36px;}
+
+.woocommerce table.custom-cart .product-remove {padding-left: 20px;}
+.woocommerce table.custom-cart .product-remove a {font-weight: normal; color:#bebebe !important;}
+.woocommerce table.custom-cart .product-remove a:hover {color:#fff !important;}
+
+.woocommerce .cart-collaterals .cart_totals, .woocommerce-page .cart-collaterals .cart_totals {max-width: 100%; width: 330px;}
+.woocommerce .cart-collaterals .cart_totals table {border:0;}
+.woocommerce .cart-collaterals .cart_totals table th {font-weight: normal; border:0;}
+.woocommerce .cart-collaterals .cart_totals table td {text-align:right;border:0;}
+.woocommerce .cart-collaterals .cart_totals table .order-total {font-size:24px;}
+
+.woocommerce .button.continue-shop {background: #fff; font-size: 14px; color: #222222; border:1px solid #b2b2ae; display:block; margin:0 0 30px auto; width: 170px;}
+.woocommerce .button.continue-shop:before {content:"+ ";color:#14c8f0; display: inline-block; margin: 0 5px 0 0;}
+
+/* Mini cart */
+#mini-cart {height: calc(100vh - 347px); padding:1px 0 0; position: relative; background: #fff;}
+#mini-cart ul {margin: 0; padding: 0;}
+#mini-cart ul li {list-style: none;}
+
+#mini-cart .woocommerce-mini-cart {min-height: calc(100% - 347px);}ackground:#333 url(../images/icn-cart.svg) no-repeat center / 20px auto;display: inline-block;width: 55px;height: 45px;float: right;font-size: 0;position: absolute;right: -30px;top: -13px;}
+#mini-cart .total, #mini-cart .buttons {display:none;}
+
+#mini-cart  .mini_cart_item {padding: 30px 0; border-bottom: 1px solid #888;}
+#mini-cart  .mini_cart_item .prolink {}
+#mini-cart  .mini_cart_item .img {display: inline-block; width: 112px; float: left;}
+#mini-cart  .mini_cart_item .img img {width: 100%; float: none;}
+#mini-cart  .mini_cart_item .desc {margin: 0 0 0 125px; display: block; color: #333; line-height: 1.3;} 
+#mini-cart  .mini_cart_item .quantity {margin: 0 0 0 125px; display: block; color: #333;} 
+#mini-cart  a.remove {color: #bebebe !important; margin: 0 0 0 auto; font-weight: normal; display: block;font-size: 1.5em;height: 1em;width: 1em;text-align: center;line-height: 1;border-radius: 100%;text-decoration: none;border: 0;}
+
+/* Checkout */
+.checkout-header {padding:150px 0 80px;}
 
 
 @media (min-width: 1600px) {
