--- a/wp-content/themes/mybizniche/style.css
+++ b/wp-content/themes/mybizniche/style.css
@@ -34,6 +34,7 @@ input[type="password"] {padding: 20px;}
 .btn-arrow .wp-block-button__link:after {content: ""; transition:all 0.5s ease; display: inline-block; position: absolute; right: 20px; width: 25px; height: 21px; margin: 0 0 0 5px; vertical-align: middle; background: url(assets/img/icn-arrow-right.svg) no-repeat right center / 25px;}
 .btn-arrow .wp-block-button__link:hover:after {right: 10px;}
 
+.wrapper {overflow: hidden;}
 
 /* page content */
 .page-content {}
@@ -106,7 +107,7 @@ input[type="password"] {padding: 20px;}
 
 
 /* Woocommerce ------- */
-.woocommerce-products-header {text-align: center; padding: 150px 0 80px;}
+.woocommerce-products-header {text-align: center; padding: 100px 0 50px;}
 .woocommerce-products-header h1 {margin-bottom: 30px;}
 .woocommerce-products-header h2 {font-weight: 500;}
 .woocommerce-products-header h2 strong {font-weight: 500; color: #14c8f0;}
@@ -247,16 +248,19 @@ input[type="password"] {padding: 20px;}
 .button-variable-wrapper .variable-item.selected {background: #333 !important; color: #fff !important;}
 
 /* My account */
+.woo-login-form {max-width: 500px; margin: 0 auto;}
 .woocommerce-account {font-size: 18px; font-weight: 400; color: #222;}
 .woocommerce-account p {font-size: 18px; font-weight: 400; color: #222;}
-
 .myaccount-header {padding: 160px 0;}
-
-.woo-login-form {max-width: 500px; margin: 0 auto;}
-
 .myaccount-main {padding: 20px 0;}
 .myaccount-main a:not(.button) {color:#14c8f0;}
 .myaccount-main a:not(.button):hover {color:#000;}
+
+.woocommerce-account .addresses .title h3 {font-size: 24px;}
+.woocommerce-account .woocommerce-Address {margin-bottom: 30px;}
+
+.edit-account fieldset {margin-top:25px;}
+.edit-account fieldset legend {margin:0 0 5px;}
 
 .myaccount-sidebar {border-right: 1px solid rgba(0,0,0,0.1); height: 100%;  padding: 20px 0;}
 .myaccount-sidebar .myaccount-navigation ul {margin: 0; padding: 0;}
@@ -266,6 +270,7 @@ input[type="password"] {padding: 20px;}
 .myaccount-sidebar .myaccount-navigation ul li a {color: #222;padding: 18px 40px 18px 30px; display: block; font:500 14px "Roboto", sans-serif; text-transform: uppercase; line-height: 1; position: relative;}
 .myaccount-sidebar .myaccount-navigation ul li a:after {content: ""; transition: all 0.5s ease; position: absolute; width: 10px; height: 10px; right: 20px; top: 20px; border-top: 2px solid; border-right: 2px solid; transform: rotate(45deg); opacity: .3;}
 .myaccount-sidebar .myaccount-navigation ul li a:hover, .myaccount-sidebar .myaccount-navigation ul li.is-active > a {background-color: #222; color:#fff;}
+
 
 .sidebar-menu h6 {text-transform: uppercase; text-align: center;}
 .sidebar-menu .myaccount-navigation {height: 100%;}
@@ -277,17 +282,19 @@ input[type="password"] {padding: 20px;}
 .sidebar-menu .myaccount-navigation ul li[class*="customer-logout"] a {text-align: center; font-size: 14px; text-transform: uppercase; font-weight:bold;}
 .sidebar-menu .myaccount-navigation ul li[class*="customer-logout"] a:before {content: url(resources/img/icn-logout.png);	display: inline-block;	vertical-align: middle;	height: 20px;	margin: 0 5px 0 0;}
 
+.sidebar-menu form.login, .sidebar-menu form.register {border: 0;   padding: 0;}
 
 .woocommerce-notices-wrapper {font-size:14px; position: fixed; right: 0; width: 362px; max-width: 90%; height: auto; z-index: 99999; top: 25%; box-shadow: 0 0 30px rgba(0,0,0,0.2);}
-.woocommerce-notices-wrapper .woocommerce-error, .woocommerce-notices-wrapper .woocommerce-message {margin: 0;}
-/*.woocommerce-error {position: fixed; right: 0;  top: 25%;   z-index: 9999; cursor: url(../images/cursor-close-red.png), auto;}*/
+.woocommerce-notices-wrapper .woocommerce-error, .woocommerce-notices-wrapper .woocommerce-message, .woocommerce-notices-wrapper .woocommerce-info {margin: 0;}
 .woocommerce-error.hide {display: none;}
 .woocommerce-notices-wrapper.hide {display: none;}
 .woocommerce-notices-wrapper .woocommerce-error ~ .close-notify,
 .woocommerce-notices-wrapper .woocommerce-message ~ .close-notify,
+.woocommerce-notices-wrapper .woocommerce-info ~ .close-notify,
 .woocommerce-notices-wrapper .woocommerce-NoticeGroup ~ .close-notify {display: block;}
 .woocommerce-notices-wrapper .close-notify {background:#b81c23 url(resources/img/icn-close-w.svg) no-repeat center / 20px; cursor: pointer; position: absolute; width: 30px; height: 30px; left: -30px; top: 0; display: none;}
 .woocommerce-notices-wrapper .woocommerce-message ~ .close-notify {background-color: #8fae1b;}
+.woocommerce-notices-wrapper .woocommerce-info ~ .close-notify {background-color: #1e85be;}
 
 /* shop page */
 .shop-content {}
@@ -405,7 +412,7 @@ input[type="password"] {padding: 20px;}
 .blog-post-list {position: relative;}
 .blog-post-item {position: relative; padding: 0 120px; margin: 0 0 60px;}
 .blog-post-item figure {margin:0 0 20px;}
-.blog-post-item .post-title {font-size:40px; font-weight: normal;}
+.blog-post-item .post-title {font-size:40px; font-weight: 300;}
 .blog-post-item .post-date {position: absolute; left:0; top:0; font-size:28px; width:120px; text-align: center;}
 .blog-post-item .post-date span {display:block; background: #222; color:#fff; line-height: 1; padding:25px; text-transform: uppercase;}
 .blog-post-item .post-date span b {font-size:40px; display:block;}
@@ -417,6 +424,7 @@ input[type="password"] {padding: 20px;}
 .blog-post-item .post-share svg {fill:#3e5e62;}
 
 .blog-post-item .entry-content {padding-top: 10px;}
+.blog-post-item .entry-content p {line-height: 2;}
 
 .btn-loading {text-align:center;}
 
@@ -453,7 +461,7 @@ input[type="password"] {padding: 20px;}
 
 /* Footer */
 .f-logo {text-align:center; margin: -10px 0 40px;}
-#footer .f-menu h4 {font-size: 14px;}
+.footer .f-menu ul li a {font-size:14px;}
 .subscribe-form .input-group .button {border: 1px solid #d1d1d1;}
 
 
@@ -516,7 +524,7 @@ input[type="password"] {padding: 20px;}
 
 	.woocommerce-checkout h3 {font-size: 30px;}
 	.woocommerce-checkout #order_review_heading + .button {display:none}
-	.woocommerce-products-header {padding:80px 0 50px}
+	.woocommerce-products-header {padding:80px 0 40px}
 
 	.batch-header h1 {font-size: 60px;}
 	.batch-header p {font-size:20px;}
@@ -612,6 +620,8 @@ input[type="password"] {padding: 20px;}
 	
 	.myaccount-header {padding: 80px 0 30px 0;}
 	.myaccount-header h1 {font-size: 40px;}
+	.myaccount-main .woocommerce-message--info {padding-bottom: 60px;}
+	.myaccount-main .woocommerce-message--info .button {position:absolute; bottom:0;}
 
 	.woocommerce-products-header {padding:60px 0 30px}
 
@@ -621,13 +631,39 @@ input[type="password"] {padding: 20px;}
 	.blog-post-header {padding:90px 0 35px !important;}
 	.blog-post-header h6 {font-size:18px;}
 	.blog-post-header h1 {font-size:32px !important;}
-	.blog-post-item {padding-left:50px;}	
-	.blog-post-item .post-title {font-size:24px;}
+	.blog-post-item {padding-left:50px; margin-left: -15px;}	
+	.blog-post-item .post-title {font-size:24px; margin-bottom:15px;}
 	.blog-post-item .post-date {width: 50px; font-size:12px;}
 	.blog-post-item .post-date span {padding:12px 0; line-height: 1.2;}
 	.blog-post-item .post-date span b {font-size: 14px;}
+	
+	.subscribe-form .input-group .input-group-field {font-size: 14px; padding:15px 12px;}
+	.subscribe-form .input-group .button {font-size:14px; padding:12px;}
+
+	.small-text-center {text-align:center;}
 }
 
 @media (max-width: 480px) {
 	#woocommerce ul.products li {text-align: center; float: none; width: auto;}
+}
+
+
+/* App css overrides 
+------------------------ */
+
+/* Homepage */
+@media (min-width: 1200px) {
+	.home .sec-banner {padding:60px 0;}
+	.home .sec-banner .text-wrap h1 {font-size:60px; margin-bottom: 20px;}
+	.home .sec-banner .text-wrap img.toka {max-width: 450px; margin-bottom: 20px;}
+	.home .sec-banner .p-tabs {margin-bottom: 40px;}
+}
+
+.sec-masthead {background: url(resources/img/bg-iv-therapy.jpg) no-repeat center center / 100%;}
+
+#faq-banner.sticky {top:145px;}
+@media (min-width: 640px) {
+	#faq-banner.sticky {top:120px;}
+	#faq-banner h1 {padding:100px 0 60px}
+	#faq-banner.sticky h1 {padding:12px 0}
 }
